installed react-router-dom library, and added routes to home and skilldetail

--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -23,3 +23,7 @@
     align-items: center;
     background-color: var(--background-skill);
 }
+.skill-section ul li a {
+    text-decoration: none;
+    color: var(--text-color);
+}
